src/test/ui/async-await/suggest-missing-await.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/suggest-missing-await.rs:12:5
   |
LL |     take_u32(x)
   |     ^^^^^^^^^-^
   |              |
   |              expected `u32`, found `impl Future`
   |
note: function defined here
  --> $DIR/suggest-missing-await.rs:3:4
   |
LL | fn take_u32(_x: u32) {}
   |    ^^^^^^^^ -------
help: provide an argument of the correct type
   |
LL |     take_u32({u32})
   |

error[E0308]: mismatched types
  --> $DIR/suggest-missing-await.rs:22:5
   |
LL | async fn dummy() {}
   |                  - the `Output` of this `async fn`'s found opaque type
...
LL |     dummy()
   |     ^^^^^^^ expected `()`, found opaque type
   |
   = note: expected unit type `()`
            found opaque type `impl Future`
help: consider `await`ing on the `Future`
   |
LL |     dummy().await
   |            ^^^^^^
help: try adding a semicolon
   |
LL |     dummy();
   |            ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
